Bug 442969 - KWin Wayland doesn't wake up the screen after it turns off anymore
Summary: KWin Wayland doesn't wake up the screen after it turns off anymore
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-26 08:16 UTC by Bharadwaj Raju
Modified: 2023-04-11 15:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bharadwaj Raju 2021-09-26 08:16:10 UTC
SUMMARY
After a recent git master update (+git20210923.0148-0), KWin Wayland doesn't wake a screen which turned off due to energy saving. Moving the mouse, typing on the keyboard, none work. The system isn't frozen, just not waking up.

Trying to switch VT with Ctrl+Alt+FN doesn't work either. Unplugging and replugging the VGA cable works, but has unrelated issues (plasmashell seems to crash, windows go offscreen, but that's for another report).

wayland-session.log says:

kwin_wayland_drm: Setting active to false failed Resource temporarily unavailable
kwin_wayland_drm: Page flip failed: Invalid argument QSharedPointer(0x557ca9d1e850)
kwin_wayland_drm: Present failed! Invalid argument

The last two lines are repeated over and over again.



STEPS TO REPRODUCE
1. Let the screen turn off due to power saving
2. Try to wake it up by moving the mouse etc.


OBSERVED RESULT
Screen does not wake up.


EXPECTED RESULT
Screen wakes up.


SOFTWARE/OS VERSIONS
KWin version: 5.23 git master (+git20210923.0148-0)
KDE Plasma Version: 5.23 git master
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
GPU: Mesa DRI Intel G41
Comment 1 Paul Worrall 2021-09-26 12:42:06 UTC
I can reproduce this, except that unplugging the VGA does not help for me.  I am still able to ssh into the PC from another machine, proving it isn't frozen.



Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-36-generic (64-bit)
Graphics Platform: Wayland
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Comment 2 Zamundaaa 2021-09-26 22:13:10 UTC
Should be fixed by https://invent.kde.org/plasma/kwin/-/merge_requests/1463.
This is something that autotests for the drm platform will hopefully catch earlier once we have those. I'll do more testing with legacy drivers until then...
Comment 3 Aleix Pol 2021-09-27 13:14:27 UTC
Git commit 4aebf0d7302e0afa431f7904e2dc948a64149eff by Aleix Pol Gonzalez, on behalf of Xaver Hugl.
Committed on 27/09/2021 at 12:55.
Pushed by zamundaaa into branch 'master'.

platforms/drm: fix legacy dpms

M  +1    -1    src/plugins/platforms/drm/drm_pipeline.cpp

https://invent.kde.org/plasma/kwin/commit/4aebf0d7302e0afa431f7904e2dc948a64149eff
Comment 4 Bharadwaj Raju 2021-11-26 12:53:40 UTC
This is happening again on git master Plasma Wayland session.
Comment 5 Zamundaaa 2021-11-29 13:35:59 UTC
hmm, can't reproduce. There's been a few changes in the last few days that might affect this, could you test again?
Comment 6 ready2rumbel 2022-02-10 15:35:13 UTC
For what it's worth, I can confirm the same behavior on Plasma 5.24.

SOFTWARE/OS VERSIONS
Linux: Fedora 35 KDE
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
System:
  Host: xxxxx Kernel: 5.16.5-200.fc35.x86_64 x86_64 bits: 64
    Desktop: KDE Plasma 5.24.0 Distro: Fedora release 35 (Thirty Five)
Machine:
  Type: Laptop System: ASUSTeK product: ROG Strix G513QY v: 1.0
    serial: <superuser required>
  Mobo: ASUSTeK model: G513QY v: 1.0 serial: <superuser required>
    UEFI: American Megatrends LLC. v: G513QY.316 date: 11/29/2021
CPU:
  Info: 8-core model: AMD Ryzen 9 5900HX with Radeon Graphics bits: 64
    type: MT MCP cache: L2: 4 MiB
Graphics:
  Device-1: AMD Navi 22 [Radeon RX 6700/6700 XT / 6800M] driver: amdgpu
    v: kernel
  Device-2: AMD Cezanne driver: amdgpu v: kernel
  Display: wayland server: X.Org 1.21.1.4 driver: loaded: amdgpu,ati
    unloaded: fbdev,modesetting,radeon,vesa resolution: 1920x1080~144Hz
  OpenGL: renderer: AMD Radeon RX 6800M (navy_flounder LLVM 13.0.0 DRM 3.44
  5.16.5-200.fc35.x86_64)
    v: 4.6 Mesa 22.1.0-devel
Comment 7 Zamundaaa 2023-03-27 16:41:13 UTC
Is this still happening for you in 5.27?
Comment 8 Bug Janitor Service 2023-04-11 03:45:48 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 9 ready2rumbel 2023-04-11 10:52:48 UTC
(In reply to Zamundaaa from comment #7)
> Is this still happening for you in 5.27?

It's no longer happening on my system (running v5.27.4).
Comment 10 Zamundaaa 2023-04-11 15:16:22 UTC
great!