platforms/drm: fix legacy dpms

BUG: 442969